--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "node-sass src/app.scss -o src"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "node-sass": "^7.0.3",
     "sass": "^1.66.1"
   }
 }
